--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
     "type": "library",
     "license": "MIT",
     "version": "1.0.0",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=8.3"
     },
