--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "authors": [
         {
-            "name": "Jiri Jozif",
+            "name": "Jiří Jozíf",
             "email": "jiri.jozif@gmail.com"
         }
     ],
